--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>The Big Hero</title>
+
+    <!-- Adobe Font Typekit -->
+    <link rel="stylesheet" href="https://use.typekit.net/nih3ted.css" />
   </head>
   <body>
     <div id="root"></div>
